# simpl-slidrr-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  Claude Code Handoff - simpl-slidrr config.dc.html  README.md
docs/: protocol.md
gui/: build.ps1  config_editor.py  device_worker.py  main.py  main_window.py  paths.py  simpl-slidrr-config.spec  slider_layout.py  telemetry_panel.py
gui/icons/: simpl-slidrr-config-icon.af
modules/aic_pico/: README.md  README_CN.md
modules/aic_pico/firmware/include/: nfc.h
modules/aic_pico/firmware/src/: CMakeLists.txt  board_defs.h  cardio.c  cardio.h  cli.c  commands.c  config.c  config.h  gui.c  gui.h  light.h  main.c  st7789.c  st7789.h
modules/aic_pico/firmware/src/lib/: pn5180.c  pn5180.h  pn532.c  pn532.h
modules/aic_pico/firmware/src/res/: resource.h
modules/aic_pico/firmware/tools/: image_conv.c
src/: CMakeLists.txt  air.c  air.h  board_defs.h  button.c  button.h  cli.c  cli.h  commands.c  commands.h  config.c  config.h  main.c  mpr121.c  protocol.c  protocol.h  save.c  save.h  sega_protocol.h  sega_serial_reader.c  sega_serial_reader.h  sega_slider.c  sega_slider.h  slider.c  slider.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
tools/: protocol_test.py  smpl_protocol.py
